[package]
name = "futures-stream-select-ext"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "futures::stream::select Ext"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/futures-ext"
homepage = "https://github.com/bk-rs/futures-ext"
documentation = "https://docs.rs/futures-stream-select-ext"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc", "futures-util/std"]
alloc = ["futures-util/alloc"]

[dependencies]
futures-util = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2" }

[dev-dependencies]
futures-executor = { version = "0.3" }
futures-timer = { version = "3.0" }
